--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "ng-io": "^1.2.0",
     "ng-socket-io": "^0.2.4",
     "ng-zorro-antd": "^1.1.0",
-    "rxjs": "^6.2.1",
+    "rxjs": "6",
+    "rxjs-compat": "6",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.7",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.7",
     "@angular/language-service": "^6.0.7",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -46,6 +46,7 @@
     "karma-jasmine-html-reporter": "^1.1.0",
     "protractor": "~5.3.2",
     "ts-node": "~7.0.0",
-    "tslint": "~5.10.0"
+    "tslint": "~5.10.0",
+    "typescript": "~2.7.2"
   }
 }
