--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.7",
     "core-js": "^2.5.7",
+    "fingerprintjs2": "^1.8.1",
     "ng-io": "^1.2.0",
     "ng-socket-io": "^0.2.4",
     "ng-zorro-antd": "^1.1.0",
