--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.7",
     "core-js": "^2.5.7",
     "fingerprintjs2": "^1.8.1",
+    "lodash": "^4.17.10",
     "ng-io": "^1.2.0",
     "ng-socket-io": "^0.2.4",
     "ng-zorro-antd": "^1.1.0",
@@ -37,6 +38,7 @@
     "@angular/language-service": "^6.0.7",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.116",
     "@types/node": "~10.5.0",
     "codelyzer": "~4.4.2",
     "jasmine-core": "~3.1.0",
